--- a/package.json
+++ b/package.json
@@ -17,34 +17,35 @@
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.3",
     "@maptiler/sdk": "^3.0.1",
-    "next-cloudinary": "^6.15.0",
     "@prisma/client": "^6.1.0",
-    "next-auth": "^5.0.0-beta.25",
     "bcryptjs": "^2.4.3",
-    "clsx": "^2.1.1"
+    "cloudinary": "^2.8.0",
+    "clsx": "^2.1.1",
+    "next": "15.1.3",
+    "next-auth": "^5.0.0-beta.25",
+    "next-cloudinary": "^6.15.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.7.2",
+    "@playwright/test": "^1.49.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.1.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
-    "@types/bcryptjs": "^2.4.6",
-    "tailwindcss": "^3.4.17",
-    "postcss": "^8.4.49",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.1.3",
+    "jsdom": "^25.0.1",
+    "postcss": "^8.4.49",
     "prisma": "^6.1.0",
+    "tailwindcss": "^3.4.17",
     "tsx": "^4.19.2",
-    "vitest": "^2.1.8",
-    "@vitejs/plugin-react": "^4.3.4",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/dom": "^10.4.0",
-    "@playwright/test": "^1.49.1",
-    "jsdom": "^25.0.1"
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8"
   }
 }
