--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
-    "next": "15.1.3",
+    "next": "^16.1.1",
     "next-auth": "^5.0.0-beta.25",
     "next-cloudinary": "^6.15.0",
     "react": "^19.0.0",
